FIX: Bug fixes have been made on ZEML DOM types, ZEMLReader and ZEMLWriter.cpp ADD: Error guard mechanisms have been implemented on ZEMLWriter in order to detect file corruptions due wrong usage of the API. ADD: Type query and value range query functions have been added to ZEValue.cpp ADD: New tool ZEMLEditor has been introduced. FIX: Bugs in ZESceneConverter have been detected and fixed.
svn path=/branches/v0.6.1-NewMeta/; revision=1599

--- a/Source/ZETools/ZEMLEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEMLEditor/CMakeLists.txt
@@ -33,19 +33,24 @@
 *****************************************************************************]]
 #ZE_SOURCE_PROCESSOR_END()
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required (VERSION 2.8)
 
-ze_set_project_folder("ZETools")
+ze_add_source(ZEMain.cpp					Sources)
+ze_add_source(ZEDOperation.cpp				Sources)
+ze_add_source(ZEDOperation.h				Sources)
+ze_add_source(ZEDOperationManager.cpp		Sources)
+ze_add_source(ZEDOperationManager.h			Sources)
+ze_add_source(ZEMLEditorWindow.cpp			Sources)
+ze_add_source(ZEMLEditorWindow.h			Sources QtMocs)
+ze_add_source(ZEMLEditorWindow.ui			Sources QtUIs)
+ze_add_source(ZEMLEditorElementWidget.cpp	Sources)
+ze_add_source(ZEMLEditorElementWidget.h		Sources QtMocs)
+ze_add_source(ZEMLEditorElementWidget.ui	Sources QtUIs)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/ZEToolComponents)
+qt4_wrap_ui(QtUIOutputs ${QtUIs})
+qt4_wrap_cpp(QtMocOutputs  ${QtMocs})
+qt4_add_resources(QtResourceOutputs ${QtResources})
 
-ze_add_module(ZE3dsMax)
-ze_add_module(ZEFontBaker)
-ze_add_module(ZEToolComponents)
-ze_add_module(ZECrashReport)
-ze_add_module(ZEProtectActivator)
-ze_add_module(ZESceneConverter)
-ze_add_module(ZEMLEditor)
-
-ze_add_cmake_project(ZETools)
+ze_add_executable(TARGET ZEMLEditor 
+	SOURCES ${Sources} ${QtMocOutputs} ${QtUIOutputs} ${QtResourceOutputs}
+	LIBS ZEFoundation libQt)
