ADD: New operation have been introduced to ZEMLEditor. ADD: ZEMLNode::Insert function has been added.
svn path=/branches/v0.6.1-NewMeta/; revision=1606

--- a/Source/ZETools/ZEMLEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEMLEditor/CMakeLists.txt
@@ -35,17 +35,25 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZEMain.cpp					Sources)
-ze_add_source(ZEDOperation.cpp				Sources)
-ze_add_source(ZEDOperation.h				Sources)
-ze_add_source(ZEDOperationManager.cpp		Sources)
-ze_add_source(ZEDOperationManager.h			Sources)
-ze_add_source(ZEMLEditorWindow.cpp			Sources)
-ze_add_source(ZEMLEditorWindow.h			Sources QtMocs)
-ze_add_source(ZEMLEditorWindow.ui			Sources QtUIs)
-ze_add_source(ZEMLEditorElementWidget.cpp	Sources)
-ze_add_source(ZEMLEditorElementWidget.h		Sources QtMocs)
-ze_add_source(ZEMLEditorElementWidget.ui	Sources QtUIs)
+ze_add_source(ZEMain.cpp						Sources)
+ze_add_source(ZEDOperation.cpp					Sources)
+ze_add_source(ZEDOperation.h					Sources)
+ze_add_source(ZEDOperationManager.cpp			Sources)
+ze_add_source(ZEDOperationManager.h				Sources)
+ze_add_source(ZEMLEditorWindow.cpp				Sources)
+ze_add_source(ZEMLEditorWindow.h				Sources QtMocs)
+ze_add_source(ZEMLEditorWindow.ui				Sources QtUIs)
+ze_add_source(ZEMLEditorElementWidget.cpp		Sources)
+ze_add_source(ZEMLEditorElementWidget.h			Sources QtMocs)
+ze_add_source(ZEMLEditorElementWidget.ui		Sources QtUIs)
+ze_add_source(ZEOperationAddElement.cpp			Sources)
+ze_add_source(ZEOperationAddElement.h			Sources)
+ze_add_source(ZEOperationChangeElementName.cpp	Sources)
+ze_add_source(ZEOperationChangeElementName.h	Sources)
+ze_add_source(ZEOperationChangeProperty.cpp		Sources)
+ze_add_source(ZEOperationChangeProperty.h		Sources)
+ze_add_source(ZEOperationDeleteElements.cpp		Sources)
+ze_add_source(ZEOperationDeleteElements.h		Sources)
 
 qt4_wrap_ui(QtUIOutputs ${QtUIs})
 qt4_wrap_cpp(QtMocOutputs  ${QtMocs})
