ADD: UserData property, which is used for storing pointer of user given custom data structure, has been added to ZEMLElement. IMP: ZEMLEditor Operations have been improved. (On going effort)
svn path=/branches/v0.6.1-NewMeta/; revision=1608

--- a/Source/ZETools/ZEMLEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEMLEditor/CMakeLists.txt
@@ -50,10 +50,12 @@ ze_add_source(ZEOperationAddElement.cpp			Sources)
 ze_add_source(ZEOperationAddElement.h			Sources)
 ze_add_source(ZEOperationChangeElementName.cpp	Sources)
 ze_add_source(ZEOperationChangeElementName.h	Sources)
-ze_add_source(ZEOperationChangeProperty.cpp		Sources)
-ze_add_source(ZEOperationChangeProperty.h		Sources)
+ze_add_source(ZEOperationChangePropertyValue.cpp		Sources)
+ze_add_source(ZEOperationChangePropertyValue.h		Sources)
 ze_add_source(ZEOperationDeleteElements.cpp		Sources)
 ze_add_source(ZEOperationDeleteElements.h		Sources)
+ze_add_source(ZEOperationSelection.cpp			Sources)
+ze_add_source(ZEOperationSelection.h			Sources)
 
 qt4_wrap_ui(QtUIOutputs ${QtUIs})
 qt4_wrap_cpp(QtMocOutputs  ${QtMocs})
