CHG: ZEMLNode, ZEMLProperty, ZEMLData classes now has the functionality to clone themselves. ADD: ZEOperationCut, ZEOperationCopy, ZEOperationPaste classes are added to ZEMLEditor as operations.
svn path=/branches/v0.6.1-NewMeta/; revision=1610

--- a/Source/ZETools/ZEMLEditor/CMakeLists.txt
+++ b/Source/ZETools/ZEMLEditor/CMakeLists.txt
@@ -46,6 +46,12 @@ ze_add_source(ZEMLEditorWindow.ui				Sources QtUIs)
 ze_add_source(ZEMLEditorElementWidget.cpp		Sources)
 ze_add_source(ZEMLEditorElementWidget.h			Sources QtMocs)
 ze_add_source(ZEMLEditorElementWidget.ui		Sources QtUIs)
+ze_add_source(ZEOperationCopy.cpp				Sources)
+ze_add_source(ZEOperationCopy.h					Sources)
+ze_add_source(ZEOperationCut.cpp				Sources)
+ze_add_source(ZEOperationCut.h					Sources)
+ze_add_source(ZEOperationPaste.cpp				Sources)
+ze_add_source(ZEOperationPaste.h				Sources)
 ze_add_source(ZEOperationAddElement.cpp			Sources)
 ze_add_source(ZEOperationAddElement.h			Sources)
 ze_add_source(ZEOperationChangeElementName.cpp	Sources)
