CHG: ZEML format has been modified to contain the ValueType of ZEMLProperty elements. Changes made on ZEMLReader, ZEMLWriter and ZEMLEditor accordingly.
svn path=/branches/v0.6.1-NewMeta/; revision=1621

--- a/Source/ZEFoundation/ZEML/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEML/CMakeLists.txt
@@ -51,11 +51,9 @@ ze_add_source(ZEMLPropertyTests.cpp 		Tests)
 ze_add_source(ZEMLData.h 					Sources Headers)
 ze_add_source(ZEMLData.cpp 					Sources)
 ze_add_source(ZEMLDataTests.cpp 			Tests)
-ze_add_source(ZEMLSerialReader.h 			Sources Headers)
-ze_add_source(ZEMLSerialReader.cpp 			Sources)
-ze_add_source(ZEMLSerialReaderTests.cpp 	Tests)
 ze_add_source(ZEMLReader.h					Sources Headers)
 ze_add_source(ZEMLReader.cpp				Sources)
+ze_add_source(ZEMLReaderV0.cpp				Sources)
 ze_add_source(ZEMLWriter.h 					Sources Headers)
 ze_add_source(ZEMLWriter.cpp 				Sources)
 
