ADD: ZETEBlockDatabase has been added to ZETerrainExporter. ADD: ZETEProcessor, which is used for processing patches and generating blocks, has been added.
svn path=/branches/v0.6.1-NewTerrain/; revision=1642

--- a/Source/ZETools/ZETerrainExporter/CMakeLists.txt
+++ b/Source/ZETools/ZETerrainExporter/CMakeLists.txt
@@ -43,12 +43,16 @@ endif()
 
 ze_add_source(ZETEBlock.cpp					Sources)
 ze_add_source(ZETEBlock.h					Sources)
+ze_add_source(ZETEBlockDatabase.cpp			Sources)
+ze_add_source(ZETEBlockDatabase.h			Sources)
 ze_add_source(ZETEPatch.cpp					Sources)
 ze_add_source(ZETEPatch.h					Sources)
 ze_add_source(ZETEPatchDatabase.cpp			Sources)
 ze_add_source(ZETEPatchDatabase.h			Sources)
 ze_add_source(ZETEResamplerIPP.cpp			Sources)
 ze_add_source(ZETEResamplerIPP.h			Sources)
+ze_add_source(ZETEProcessor.cpp				Sources)
+ze_add_source(ZETEProcessor.h				Sources)
 ze_add_source(ZETEMain.cpp					Sources)
 
 ze_add_executable(TARGET ZETerrainExporter
