IMP: ZETerrain has been improved. Many interfaces has been rewritten and/or re-factored.
svn path=/branches/v0.6.1-NewTerrain/; revision=1651

--- a/Source/ZEEngine/ZETerrain/CMakeLists.txt
+++ b/Source/ZEEngine/ZETerrain/CMakeLists.txt
@@ -35,24 +35,20 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZETerrain.cpp						Sources)
-ze_add_source(ZETerrain.h						Sources)
-ze_add_source(ZETerrainLayer.cpp				Sources)
-ze_add_source(ZETerrainLayer.h					Sources)
-ze_add_source(ZETerrainLevel.cpp				Sources)
-ze_add_source(ZETerrainLevel.h					Sources)
-ze_add_source(ZETerrainBlock.h					Sources)
-ze_add_source(ZETerrainBlock.cpp				Sources)
-ze_add_source(ZETerrainBlockCache.h				Sources)
-ze_add_source(ZETerrainBlockCache.cpp			Sources)
-ze_add_source(ZETerrainResource.cpp				Sources)
-ze_add_source(ZETerrainResource.h				Sources)
-ze_add_source(ZETerrainDrawer.cpp				Sources)
-ze_add_source(ZETerrainDrawer.h					Sources)
-ze_add_source(ZETerrainPrimitiveBuffer.cpp		Sources)
-ze_add_source(ZETerrainPrimitiveBuffer.h		Sources)
-ze_add_source(ZETextureSampler.h				Sources)
-ze_add_source(ZETextureSampler.cpp				Sources)
+ze_add_source(ZETRTerrain.cpp				Sources)
+ze_add_source(ZETRTerrain.h					Sources Headers)
+ze_add_source(ZETRBlock.cpp					Sources)
+ze_add_source(ZETRBlock.h					Sources Headers)
+ze_add_source(ZETRBlockCache.cpp			Sources)
+ze_add_source(ZETRBlockCache.h				Sources Headers)
+ze_add_source(ZETRDrawer.cpp				Sources)
+ze_add_source(ZETRDrawer.h					Sources Headers)
+ze_add_source(ZETRPrimitives.cpp			Sources)
+ze_add_source(ZETRPrimitives.h				Sources)
+ze_add_source(ZETRLayer.cpp					Sources)
+ze_add_source(ZETRLayer.h					Sources Headers)
+ze_add_source(ZETRLevel.cpp					Sources)
+ze_add_source(ZETRLevel.h					Sources Headers)
 
 ze_add_library(TARGET ZETerrain
 	SOURCES ${Sources}
