ADD: ZEDCore class has been added. CHG: Implementation progress has been made across ZEDCore project.
svn path=/branches/v0.6.2-NewEditor/; revision=1655

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -55,6 +55,8 @@ ze_add_source(ZEDViewPort.cpp				Sources)
 ze_add_source(ZEDViewPort.h					Sources Headers)
 ze_add_source(ZEDEntityTag.cpp				Sources)
 ze_add_source(ZEDEntityTag.h				Sources Headers)
+ze_add_source(ZEDCore.cpp					Sources)
+ze_add_source(ZEDCore.h						Sources Headers)
 
 
 ze_add_library(TARGET ZEDCore 
