--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -45,14 +45,14 @@ ze_add_source(ZEDTransformationManager.cpp	Sources)
 ze_add_source(ZEDTransformationManager.h	Sources Headers)
 ze_add_source(ZEDScene.cpp					Sources)
 ze_add_source(ZEDScene.h					Sources Headers)
-ze_add_source(ZEDTag.cpp					Sources)
-ze_add_source(ZEDTag.h						Sources Headers)
+ze_add_source(ZEDObjectWrapper.cpp			Sources)
+ze_add_source(ZEDObjectWrapper.h			Sources Headers)
 ze_add_source(ZEDSelectionManager.cpp		Sources)
 ze_add_source(ZEDSelectionManager.h			Sources Headers)
 ze_add_source(ZEDViewPort.cpp				Sources)
 ze_add_source(ZEDViewPort.h					Sources Headers)
-ze_add_source(ZEDEntityTag.cpp				Sources)
-ze_add_source(ZEDEntityTag.h				Sources Headers)
+ze_add_source(ZEDEntityWrapper.cpp			Sources)
+ze_add_source(ZEDEntityWrapper.h			Sources Headers)
 ze_add_source(ZEDCore.cpp					Sources)
 ze_add_source(ZEDCore.h						Sources Headers)
 
