--- a/Source/ZEFoundation/ZEFile/CMakeLists.txt
+++ b/Source/ZEFoundation/ZEFile/CMakeLists.txt
@@ -53,6 +53,8 @@ ze_add_source(ZEFileInfoTests.cpp			Tests)
 ze_add_source(ZEFileTests.cpp				Tests)
 ze_add_source(ZEPathInfo.cpp				Sources)
 ze_add_source(ZEPathInfo.h					Sources Headers)
+ze_add_source(ZEPathTokenizer.cpp			Sources)
+ze_add_source(ZEPathTokenizer.h				Sources)
 ze_add_source(ZEPartialFile.cpp				Sources)
 ze_add_source(ZEPartialFile.h				Sources Headers)
 ze_add_source(ZEPartialFileTests.cpp		Tests)
