CHG: Several major changes have been made on ZE3dsMax project. ZE3dsMaxPlugin has been modified to work on 3ds Max 2015, thus several deprecated functions have been changed and structural changes concerning maxscript files that were necessary have been done. 3dsMax 2015 libraries have been added to ZEExternal and since 3ds Max 2013 plugins are required to be built as Unicode, build options for Cmake files has to be included. FIX: ZEToolComponents/ZEResourceConfigurationWidget were causing 3ds Max 2015 to crash after export operations. Temporary fix has been made. FIX: Minor fix on ZEFile concerning file open mode modifiers.
svn path=/trunk/; revision=1671

--- a/Source/ZETools/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/CMakeLists.txt
@@ -37,7 +37,7 @@ cmake_minimum_required (VERSION 2.8)
 
 ze_set_project_folder("ZETools/ZE3dsMax")
 
-set(ZEBUILD_3DS_MAX_BINARY_DIRECTORY "C:\\Program Files (x86)\\Autodesk\\3ds Max 2010" CACHE STRING "Directory of 3ds max.")
+set(ZEBUILD_3DS_MAX_BINARY_DIRECTORY "C:\\Program Files\\Autodesk\\3ds Max 2015" CACHE STRING "Directory of 3ds max.")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
