--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxUI/CMakeLists.txt
@@ -35,17 +35,27 @@
 
 cmake_minimum_required (VERSION 2.8)
 
-ze_add_source(ZE3dsMaxUI.h						Sources)
-ze_add_source(ZE3dsMaxUI.cpp					Sources)
-ze_add_source(ZE3dsMaxUIDescription.h			Sources)
-ze_add_source(ZE3dsMaxUIDescription.cpp			Sources)
-ze_add_source(ZE3dsMaxScriptCommonUtilities.ms 	Sources ZEFC)
-ze_add_source(ZE3dsMaxScriptHelper.ms			Sources ZEFC)
-ze_add_source(ZE3dsMaxScriptRemove.ms 			Sources ZEFC)
+ze_add_source(ZE3dsMaxUI.h							Sources)
+ze_add_source(ZE3dsMaxUI.cpp						Sources)
+ze_add_source(ZE3dsMaxUIDescription.h				Sources)
+ze_add_source(ZE3dsMaxUIDescription.cpp				Sources)
+ze_add_source(ZE3dsMaxScriptCommonUtilities.ms 		Sources ZEFC)
+ze_add_source(ZE3dsMaxScriptHelper.ms				Sources ZEFC)
+ze_add_source(ZE3dsMaxScriptRemove.ms 				Sources ZEFC)
+ze_add_source(ZE3dsMaxInteriorActions.cpp			Sources)
+ze_add_source(ZE3dsMaxInteriorActions.h				Sources)
+ze_add_source(ZE3dsMaxInteriorScriptRoom.ms			Sources ZEFC)
+ze_add_source(ZE3dsMaxInteriorScriptDoor.ms			Sources ZEFC)
+ze_add_source(ZE3dsMaxModelActions.h				Sources)
+ze_add_source(ZE3dsMaxModelActions.cpp				Sources)
+ze_add_source(ZE3dsMaxModelScriptMesh.ms			Sources ZEFC)
+ze_add_source(ZE3dsMaxModelScriptBone.ms			Sources ZEFC)
+ze_add_source(ZE3dsMaxModelScriptPhysicalBody.ms	Sources ZEFC)
+ze_add_source(ZE3dsMaxModelScriptBoundingBox.ms		Sources ZEFC)
 
 ze_add_library(TARGET ZE3dsMaxUI 
 	SOURCES ${Sources}
 	ZEFC ${ZEFC}
-	LIBS ZEFoundation lib3dsMax)
+	LIBS ZEFoundation lib3dsMax2015)
 
 set_property(TARGET ZE3dsMaxUI APPEND PROPERTY COMPILE_FLAGS "/GR")
