--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxInteriorExporter/CMakeLists.txt
@@ -43,10 +43,6 @@ ze_add_source(ZE3dsMaxInteriorExporterProcess.cpp			Sources)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsDialog.h		Sources QtMocs)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsDialog.cpp		Sources)
 ze_add_source(ZE3dsMaxInteriorExporterOptionsWidget.ui		Sources QtUI)
-ze_add_source(ZE3dsMaxInteriorActions.cpp					Sources)
-ze_add_source(ZE3dsMaxInteriorActions.h						Sources)
-ze_add_source(ZE3dsMaxInteriorScriptRoom.ms					Sources ZEFC)
-ze_add_source(ZE3dsMaxInteriorScriptDoor.ms					Sources ZEFC)
 
 qt4_add_resources(QtResourceFiles ${QtResources})
 qt4_wrap_ui(QtUIFiles ${QtUI})
@@ -54,6 +50,5 @@ qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 
 ze_add_library(TARGET ZE3dsMaxInteriorExporter 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
-	ZEFC ${ZEFC}
-	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax QWinWidget)
+	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax2015 QWinWidget)
 set_property(TARGET ZE3dsMaxInteriorExporter APPEND PROPERTY COMPILE_FLAGS " /GR")
