--- a/Source/ZETools/ZE3dsMax/ZE3dsMaxModelExporter/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/ZE3dsMaxModelExporter/CMakeLists.txt
@@ -43,12 +43,6 @@ ze_add_source(ZE3dsMaxModelExporterProcess.cpp			Sources)
 ze_add_source(ZE3dsMaxModelExporterOptionsDialog.h		Sources QtMocs)
 ze_add_source(ZE3dsMaxModelExporterOptionsDialog.cpp	Sources)
 ze_add_source(ZE3dsMaxModelExporterOptionsWidget.ui		Sources QtUI)
-ze_add_source(ZE3dsMaxModelActions.h					Sources)
-ze_add_source(ZE3dsMaxModelActions.cpp					Sources)
-ze_add_source(ZE3dsMaxModelScriptMesh.ms				Sources ZEFC)
-ze_add_source(ZE3dsMaxModelScriptBone.ms				Sources ZEFC)
-ze_add_source(ZE3dsMaxModelScriptPhysicalBody.ms		Sources ZEFC)
-ze_add_source(ZE3dsMaxModelScriptBoundingBox.ms			Sources ZEFC)
 
 qt4_add_resources(QtResourceFiles ${QtResources})
 qt4_wrap_ui(QtUIFiles ${QtUI})
@@ -56,7 +50,6 @@ qt4_wrap_cpp(QtMocFiles  ${QtMocs})
 
 ze_add_library(TARGET ZE3dsMaxModelExporter 
 	SOURCES ${Sources} ${QtMocFiles} ${QtUIFiles} ${QtResourceFiles}
-	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax QWinWidget
-	ZEFC ${ZEFC})
+	LIBS ZEFoundation ZE3dsMaxUtils ZEProgressDialog ZEResourceConfigurationWidget libQt lib3dsMax2015 QWinWidget)
 
 set_property(TARGET ZE3dsMaxModelExporter APPEND PROPERTY COMPILE_FLAGS " /GR")
