--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -48,10 +48,10 @@ if(ZEBUILD_D3D9_DEBUG_SHADERS_RELEASE)
 	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_DEBUG_SHADERS)
 endif()
 
-ze_add_source(ZED3D11ComponentBase.cpp			Sources)
-ze_add_source(ZED3D11ComponentBase.h			Sources)
-ze_add_source(ZED3D11DepthStencilBuffer.cpp		Sources)
-ze_add_source(ZED3D11DepthStencilBuffer.h		Sources)
+ze_add_source(ZED11ComponentBase.cpp			Sources)
+ze_add_source(ZED11ComponentBase.h				Sources)
+ze_add_source(ZED11DepthStencilBuffer.cpp		Sources)
+ze_add_source(ZED11DepthStencilBuffer.h			Sources)
 ze_add_source(ZED3D11EventTracer.cpp			Sources)
 ze_add_source(ZED3D11EventTracer.h				Sources)
 ze_add_source(ZED3D11GraphicsDevice.cpp			Sources)
@@ -70,8 +70,8 @@ ze_add_source(ZED3D11Shader.cpp					Sources)
 ze_add_source(ZED3D11Shader.h					Sources)
 ze_add_source(ZED3D11ShaderCompiler.cpp			Sources)
 ze_add_source(ZED3D11ShaderCompiler.h			Sources)
-ze_add_source(ZED3D11ConstantBuffer.cpp			Sources)
-ze_add_source(ZED3D11ConstantBuffer.h			Sources)
+ze_add_source(ZED11ConstantBuffer.cpp			Sources)
+ze_add_source(ZED11ConstantBuffer.h				Sources)
 ze_add_source(ZED3D11ShaderManager.cpp			Sources)
 ze_add_source(ZED3D11ShaderManager.h			Sources)
 ze_add_source(ZED3D11StatePool.cpp				Sources)
