FIX: Fixes have been made on ZEPathTokenizer in ZEPathTokenizer.cpp and ZEPathInfo.cpp FIX: Fix has been made on ZEMLNode about reading size of ZEMLData objects on ZEMLNode.cpp. FIX: Fixes have been made on ZEMLEditor about editing string typed element values on ZEMLEditorElementWidget class.
svn path=/trunk/; revision=1678

--- a/Source/ZETools/ZE3dsMax/CMakeLists.txt
+++ b/Source/ZETools/ZE3dsMax/CMakeLists.txt
@@ -41,6 +41,8 @@ set(ZEBUILD_3DS_MAX_BINARY_DIRECTORY "C:\\Program Files\\Autodesk\\3ds Max 2015"
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+add_definitions(-D_UNICODE)
+
 add_subdirectory(ZE3dsMaxUI)
 add_subdirectory(ZE3dsMaxModelExporter)
 add_subdirectory(ZE3dsMaxInteriorExporter)
