IMP: Many improvements on ZEGraphics API. IMP: On going effort for porting Direct3D 11 module to new ZEGraphics API.
svn path=/branches/v0.6.2-Graphics/; revision=1679

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -99,6 +99,8 @@ ze_add_source(ZEGRShaderCompileOptions.h	Sources Headers)
 
 ze_add_source(ZEGRMonitor.h					Sources Headers)
 ze_add_source(ZEGRMonitor.cpp				Sources)
+ze_add_source(ZEGRScreen.h					Sources Headers)
+ze_add_source(ZEGRScreen.cpp				Sources)
 ze_add_source(ZEGRWindow.h					Sources Headers)
 ze_add_source(ZEGRWindow.cpp				Sources)
 ze_add_source(ZEGRWindow_Unix.cpp			Sources PLATFORMS Unix)
