--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -52,8 +52,8 @@ ze_add_source(ZED11ComponentBase.cpp			Sources)
 ze_add_source(ZED11ComponentBase.h				Sources)
 ze_add_source(ZED11DepthStencilBuffer.cpp		Sources)
 ze_add_source(ZED11DepthStencilBuffer.h			Sources)
-ze_add_source(ZED3D11EventTracer.cpp			Sources)
-ze_add_source(ZED3D11EventTracer.h				Sources)
+ze_add_source(ZED11Tracer.cpp					Sources)
+ze_add_source(ZED11Tracer.h						Sources)
 ze_add_source(ZED3D11GraphicsDevice.cpp			Sources)
 ze_add_source(ZED3D11GraphicsDevice.h			Sources)
 ze_add_source(ZED3D11GraphicsModule.cpp			Sources)
@@ -62,28 +62,30 @@ ze_add_source(ZED3D11GraphicsWindow.cpp			Sources)
 ze_add_source(ZED3D11GraphicsWindow.h			Sources)
 ze_add_source(ZED3D11GraphicsMonitor.cpp		Sources)
 ze_add_source(ZED3D11GraphicsMonitor.h			Sources)
-ze_add_source(ZED3D11IndexBuffer.cpp			Sources)
-ze_add_source(ZED3D11IndexBuffer.h				Sources)
-ze_add_source(ZED3D11RenderTarget.cpp			Sources)
-ze_add_source(ZED3D11RenderTarget.h				Sources)
-ze_add_source(ZED3D11Shader.cpp					Sources)
-ze_add_source(ZED3D11Shader.h					Sources)
-ze_add_source(ZED3D11ShaderCompiler.cpp			Sources)
-ze_add_source(ZED3D11ShaderCompiler.h			Sources)
+ze_add_source(ZED11IndexBuffer.cpp				Sources)
+ze_add_source(ZED11IndexBuffer.h				Sources)
+ze_add_source(ZED11RenderTarget.cpp				Sources)
+ze_add_source(ZED11RenderTarget.h				Sources)
+ze_add_source(ZED11Shader.cpp					Sources)
+ze_add_source(ZED11Shader.h						Sources)
+ze_add_source(ZED11ShaderCompiler.cpp			Sources)
+ze_add_source(ZED11ShaderCompiler.h				Sources)
 ze_add_source(ZED11ConstantBuffer.cpp			Sources)
 ze_add_source(ZED11ConstantBuffer.h				Sources)
 ze_add_source(ZED3D11ShaderManager.cpp			Sources)
 ze_add_source(ZED3D11ShaderManager.h			Sources)
 ze_add_source(ZED3D11StatePool.cpp				Sources)
 ze_add_source(ZED3D11StatePool.h				Sources)
-ze_add_source(ZED3D11Texture2D.cpp				Sources)
-ze_add_source(ZED3D11Texture2D.h				Sources)
-ze_add_source(ZED3D11Texture3D.cpp				Sources)
-ze_add_source(ZED3D11Texture3D.h				Sources)
-ze_add_source(ZED3D11TextureCube.cpp			Sources)
-ze_add_source(ZED3D11TextureCube.h				Sources)
-ze_add_source(ZED3D11VertexBuffer.cpp			Sources)
-ze_add_source(ZED3D11VertexBuffer.h				Sources)
+ze_add_source(ZED11Screen.cpp					Sources)
+ze_add_source(ZED11Screen.h						Sources)
+ze_add_source(ZED11Texture2D.cpp				Sources)
+ze_add_source(ZED11Texture2D.h					Sources)
+ze_add_source(ZED11Texture3D.cpp				Sources)
+ze_add_source(ZED11Texture3D.h					Sources)
+ze_add_source(ZED11TextureCube.cpp				Sources)
+ze_add_source(ZED11TextureCube.h				Sources)
+ze_add_source(ZED11VertexBuffer.cpp				Sources)
+ze_add_source(ZED11VertexBuffer.h				Sources)
 
 ze_add_library(TARGET ZEDirect3D11
 	SOURCES ${Sources}
