IMP: Many improvements on ZEGraphics API and ZED11Direct3D11Module.
svn path=/branches/v0.6.2-Graphics/; revision=1680

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -97,8 +97,8 @@ ze_add_source(ZEGRShaderCompiler.h			Sources Headers)
 ze_add_source(ZEGRShaderCompileOptions.cpp	Sources)
 ze_add_source(ZEGRShaderCompileOptions.h	Sources Headers)
 
-ze_add_source(ZEGRMonitor.h					Sources Headers)
-ze_add_source(ZEGRMonitor.cpp				Sources)
+ze_add_source(ZEGRAdapter.h					Sources Headers)
+ze_add_source(ZEGRAdapter.cpp				Sources)
 ze_add_source(ZEGRScreen.h					Sources Headers)
 ze_add_source(ZEGRScreen.cpp				Sources)
 ze_add_source(ZEGRWindow.h					Sources Headers)
