--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -38,12 +38,12 @@ cmake_minimum_required (VERSION 2.8)
 ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_DEBUG
 	ZE_DEBUG_D3D10_DEBUG_SHADERS	ZE_DEBUG_D3D10_ENABLE_PERFHUD)
 
-set(ZEBUILD_D3D10_ENABLE_PERFHUD	                FALSE CACHE BOOL "AT RELEASE CONFIGURATION; Enable PerfHud device in release mode.")
+set(ZEBUILD_D3D10_ENABLE_PERFHUD FALSE CACHE BOOL "AT RELEASE CONFIGURATION; Enable PerfHud device in release mode.")
 if(ZEBUILD_D3D10_ENABLE_PERFHUD)
 	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_ENABLE_PERFHUD)
 endif()
 
-set(ZEBUILD_D3D10_DEBUG_SHADERS_RELEASE   TRUE CACHE BOOL "AT RELEASE CONFIGURATION; Compile shaders with debug mode.")
+set(ZEBUILD_D3D10_DEBUG_SHADERS_RELEASE TRUE CACHE BOOL "AT RELEASE CONFIGURATION; Compile shaders with debug mode.")
 if(ZEBUILD_D3D9_DEBUG_SHADERS_RELEASE)
 	ze_append_property(DIRECTORY PROPERTY COMPILE_DEFINITIONS_RELEASE ZE_DEBUG_D3D10_DEBUG_SHADERS)
 endif()
@@ -54,14 +54,12 @@ ze_add_source(ZED11DepthStencilBuffer.cpp		Sources)
 ze_add_source(ZED11DepthStencilBuffer.h			Sources)
 ze_add_source(ZED11Tracer.cpp					Sources)
 ze_add_source(ZED11Tracer.h						Sources)
-ze_add_source(ZED3D11GraphicsDevice.cpp			Sources)
-ze_add_source(ZED3D11GraphicsDevice.h			Sources)
-ze_add_source(ZED3D11GraphicsModule.cpp			Sources)
-ze_add_source(ZED3D11GraphicsModule.h			Sources)
-ze_add_source(ZED3D11GraphicsWindow.cpp			Sources)
-ze_add_source(ZED3D11GraphicsWindow.h			Sources)
-ze_add_source(ZED3D11GraphicsMonitor.cpp		Sources)
-ze_add_source(ZED3D11GraphicsMonitor.h			Sources)
+ze_add_source(ZED11Device.cpp					Sources)
+ze_add_source(ZED11Device.h						Sources)
+ze_add_source(ZED11Direct3D11Module.cpp			Sources)
+ze_add_source(ZED11Direct3D11Module.h			Sources)
+ze_add_source(ZED11Adapter.cpp					Sources)
+ze_add_source(ZED11Adapter.h					Sources)
 ze_add_source(ZED11IndexBuffer.cpp				Sources)
 ze_add_source(ZED11IndexBuffer.h				Sources)
 ze_add_source(ZED11RenderTarget.cpp				Sources)
@@ -72,10 +70,8 @@ ze_add_source(ZED11ShaderCompiler.cpp			Sources)
 ze_add_source(ZED11ShaderCompiler.h				Sources)
 ze_add_source(ZED11ConstantBuffer.cpp			Sources)
 ze_add_source(ZED11ConstantBuffer.h				Sources)
-ze_add_source(ZED3D11ShaderManager.cpp			Sources)
-ze_add_source(ZED3D11ShaderManager.h			Sources)
-ze_add_source(ZED3D11StatePool.cpp				Sources)
-ze_add_source(ZED3D11StatePool.h				Sources)
+ze_add_source(ZED11StatePool.cpp				Sources)
+ze_add_source(ZED11StatePool.h					Sources)
 ze_add_source(ZED11Screen.cpp					Sources)
 ze_add_source(ZED11Screen.h						Sources)
 ze_add_source(ZED11Texture2D.cpp				Sources)
