--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -142,7 +142,9 @@ ze_add_source(ZED3D9Plugin.h							Sources)
 ze_add_source(ZED3D9Plugin.cpp							Sources)
 ze_add_source(ZED3D9SeaMaterial.h						Sources)
 ze_add_source(ZED3D9SeaMaterial.cpp						Sources)
-ze_add_sourcE(Logo.png									Sources ZEFC)
+ze_add_source(SplashScreen.png							Sources ZEFC)
+ze_add_source(SplashScreenDemo.png						Sources ZEFC)
+ze_add_source(SplashScreenDevelopment.png				Sources ZEFC)
 	
 ze_add_source(ZED3D9AerialPerspectiveProcessor.cpp		Sources)
 ze_add_source(ZED3D9AerialPerspectiveProcessor.h		Sources ZEMC)
