--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -38,10 +38,28 @@ MusicVolume = 100
 VideoVolume = 100
 PlayerCommVolume = 100
 
-[CustHCombat]
-MouseMode = false
-GunSensor = VectorNav00
-HMDSensor = ISense00
-GunSensorPort = 11
-HMDSensorPort = 5
+[CustT]
+IGIP = 127.0.0.1
+ResponseIP = 127.0.0.1
+ReceiverPort = 27100
+SenderPort = 27200
+SimulationPort = 27300
+AcknowledgeByte = false
+GimbalMaxAzimuthRate = 360.000000
+GimbalMaxElevationRate = 360.000000
+GimbalDefaultAzimuthRate = 15.000000
+GimbalDefaultElevationRate = 15.000000
+CameraEOIndex = 2
+CameraIRIndex = 18
+CameraEOMaxFOV = 60.000000
+CameraEOMinFOV = 5.000000
+CameraIRMaxFOV = 60.000000
+CameraIRMinFOV = 5.000000
+CameraEOMaxZoomRate = 360.000000
+CameraIRMaxZoomRate = 360.000000
+CameraEODefaultZoomRate = 5.000000
+CameraIRDefaultZoomRate = 5.000000
+SceneTimeOfDay = 1.000000
+SceneSunlightIntensity = 3.000000
+SceneAmbientFactor = 0.300000
 
