ADD: Loading screen has been added to ZED3D9Module.cpp FIX: Main window icon has been changed to Zinek Engine logo.
svn path=/trunk/; revision=1687

--- a/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D9/CMakeLists.txt
@@ -142,12 +142,14 @@ ze_add_source(ZED3D9Plugin.h							Sources)
 ze_add_source(ZED3D9Plugin.cpp							Sources)
 ze_add_source(ZED3D9SeaMaterial.h						Sources)
 ze_add_source(ZED3D9SeaMaterial.cpp						Sources)
-ze_add_source(SplashScreen.png							Sources ZEFC)
-ze_add_source(SplashScreenDemo.png						Sources ZEFC)
-ze_add_source(SplashScreenDevelopment.png				Sources ZEFC)
+
+ze_add_source(Loading.png										Sources ZEFC)
+ze_add_source(SplashScreen.png									Sources ZEFC)
+ze_add_source(SplashScreenDemo.png								Sources ZEFC)
+ze_add_source(SplashScreenDevelopment.png						Sources ZEFC)
 	
-ze_add_source(ZED3D9AerialPerspectiveProcessor.cpp		Sources)
-ze_add_source(ZED3D9AerialPerspectiveProcessor.h		Sources ZEMC)
+ze_add_source(ZED3D9AerialPerspectiveProcessor.cpp				Sources)
+ze_add_source(ZED3D9AerialPerspectiveProcessor.h				Sources ZEMC)
 
 ze_add_source(Shaders/AerialPerspectiveProcessor.hlsl			Shaders ZEFC)
 ze_add_source(Shaders/BlurMaskProcessor.hlsl					Shaders ZEFC)
