--- a/Source/ZEEngine/ZEGame/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGame/CMakeLists.txt
@@ -49,10 +49,10 @@ ze_add_source(ZEEntity.cpp				Sources)
 ze_add_source(ZEEntity.h				Sources Headers ZEMC)
 ze_add_source(ZEEntityProvider.cpp		Sources)
 ze_add_source(ZEEntityProvider.h		Sources Headers)
-ze_add_source(ZEGame.cpp				Sources)
-ze_add_source(ZEGame.h					Sources Headers ZEMC)
-ze_add_source(ZEGameProvider.cpp		Sources)
-ze_add_source(ZEGameProvider.h			Sources Headers)
+#ze_add_source(ZEGame.cpp				Sources)
+#ze_add_source(ZEGame.h					Sources Headers ZEMC)
+#ze_add_source(ZEGameProvider.cpp		Sources)
+#ze_add_source(ZEGameProvider.h			Sources Headers)
 ze_add_source(ZEGrid.cpp				Sources)
 ze_add_source(ZEGrid.h					Sources	Headers ZEMC)
 ze_add_source(ZEGizmo.cpp	    		Sources)
