--- a/Source/ZEEngine/ZEUI/CMakeLists.txt
+++ b/Source/ZEEngine/ZEUI/CMakeLists.txt
@@ -68,12 +68,10 @@ ze_add_source(ZEUIVerticalSliderControl.cpp			Sources)
 ze_add_source(ZEUIVerticalSliderControl.h			Sources Headers ZEMC)
 ze_add_source(ZEUTextEditControl.cpp				Sources)
 ze_add_source(ZEUTextEditControl.h					Sources Headers ZEMC)
-ze_add_source(ZEUISequencePlayer.cpp				Sources)
-ze_add_source(ZEUISequencePlayer.h					Sources Headers ZEMC)
 ze_add_source(ZEUISceneStatisticsControl.cpp		Sources)
 ze_add_source(ZEUISceneStatisticsControl.h			Sources Headers)
-#ze_add_source(ZEUIInteriorStatisticsControl.cpp	Sources)
-#ze_add_source(ZEUIInteriorStatisticsControl.h		Sources Headers)
+ze_add_source(ZEUIInteriorStatisticsControl.cpp		Sources)
+ze_add_source(ZEUIInteriorStatisticsControl.h		Sources Headers)
 ze_add_source(ZEUILabel.cpp							Sources)
 ze_add_source(ZEUILabel.h							Sources Headers ZEMC)
 ze_add_source(ZEUITextCursor.cpp					Sources)
