IMP: On going effort on ZEGraphics and ZERenderer implementation.
svn path=/branches/v0.6.2-Graphics/; revision=1693

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -83,10 +83,10 @@ ze_add_source(ZEGRDepthStencilBuffer.h		Sources Headers)
 ze_add_source(ZEGRRenderTarget.cpp 			Sources)
 ze_add_source(ZEGRRenderTarget.h 			Sources Headers)
 
-ze_add_source(ZEGRScissorRectangle.cpp		Sources)
-ze_add_source(ZEGRScissorRectangle.h		Sources Headers)
-ze_add_source(ZEGRViewPort.cpp				Sources)
-ze_add_source(ZEGRViewPort.h				Sources Headers)
+ze_add_source(ZEGRScissorRect.cpp			Sources)
+ze_add_source(ZEGRScissorRect.h				Sources Headers)
+ze_add_source(ZEGRViewport.cpp				Sources)
+ze_add_source(ZEGRViewport.h				Sources Headers)
 
 ze_add_source(ZEGRShader.cpp 				Sources)
 ze_add_source(ZEGRShader.h 					Sources Headers)
