--- a/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
+++ b/Source/ZEModules/ZEDirect3D11/CMakeLists.txt
@@ -75,8 +75,8 @@ ze_add_source(ZED11State.h						Sources)
 ze_add_source(ZED11State.cpp					Sources)
 ze_add_source(ZED11StatePool.h					Sources)
 ze_add_source(ZED11StatePool.cpp				Sources)
-ze_add_source(ZED11RenderState.h				Sources)
-ze_add_source(ZED11RenderState.cpp				Sources)
+ze_add_source(ZED11RenderStateData.h			Sources)
+ze_add_source(ZED11RenderStateData.cpp			Sources)
 ze_add_source(ZED11Screen.h						Sources)
 ze_add_source(ZED11Texture2D.cpp				Sources)
 ze_add_source(ZED11Texture2D.h					Sources)
