IMP: ZEGraphics, ZED11Module and ZERNNRenderer have been improved.
svn path=/branches/v0.6.2-Graphics/; revision=1694

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -69,6 +69,8 @@ ze_add_source(ZEMaterialResource.h 					Sources Headers)
 
 ze_add_source(ZERNStage.h 							Sources Headers)
 ze_add_source(ZERNStage.cpp 						Sources)
+ze_add_source(ZERNStageManager.h 					Sources Headers)
+ze_add_source(ZERNStageManager.cpp 					Sources)
 ze_add_source(ZERNStageGBuffer.h 					Sources Headers)
 ze_add_source(ZERNStageGBuffer.cpp 					Sources)
 ze_add_source(ZERNStageAO.h 						Sources Headers)
