FIX: ZEMetaCompiler attribute bus and problems (such as __declspec, dllimport, dllexport) have been fixed. FIX: ZEMetaCompiler memory corruption attribute parsing phase has been fixed. CHG: Stock ZEMetaCompiler.exe has been updated.
svn path=/branches/v0.6.2-NewEditor/; revision=1696

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -35,6 +35,8 @@
 
 cmake_minimum_required(VERSION 2.8)
 
+include_directories("C:/Users/Orcun/Desktop/Zinek Engine/ZEExternal/trunk/Windows-x64-MSVCv110/libQt/Include")
+
 ze_add_source(ZEDOperation.cpp					Sources)
 ze_add_source(ZEDOperation.h					Sources Headers)
 ze_add_source(ZEDOperationManager.cpp			Sources)
